ffi_lib/legado_ffi.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/legado/go-analyzer/ffi */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "ffi.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern __declspec(dllexport) void LogInit(char* path);
extern __declspec(dllexport) void LogSetEnabled(int enabled);
extern __declspec(dllexport) void LogClose(void);
extern __declspec(dllexport) GoInt64 AnalyzerNew(GoInt64 ruleDataID, GoInt64 sourceID);
extern __declspec(dllexport) void AnalyzerSetContent(GoInt64 analyzerID, char* content, char* baseUrl);
extern __declspec(dllexport) void AnalyzerSetRedirectUrl(GoInt64 analyzerID, char* url);
extern __declspec(dllexport) char* AnalyzerGetString(GoInt64 analyzerID, char* rule);
extern __declspec(dllexport) char* AnalyzerGetStringList(GoInt64 analyzerID, char* rule);
extern __declspec(dllexport) char* AnalyzerGetElement(GoInt64 analyzerID, char* rule);
extern __declspec(dllexport) char* AnalyzerGetElements(GoInt64 analyzerID, char* rule);
extern __declspec(dllexport) void AnalyzerFree(GoInt64 analyzerID);
extern __declspec(dllexport) GoInt64 RuleDataNew(void);
extern __declspec(dllexport) void RuleDataPut(GoInt64 ruleDataID, char* key, char* value);
extern __declspec(dllexport) char* RuleDataGet(GoInt64 ruleDataID, char* key);
extern __declspec(dllexport) void RuleDataFree(GoInt64 ruleDataID);
extern __declspec(dllexport) GoInt64 JSNew(void);
extern __declspec(dllexport) char* JSExec(GoInt64 engineID, char* code, char* varsJSON);
extern __declspec(dllexport) char* JSExecWithResult(GoInt64 engineID, char* code, char* result);
extern __declspec(dllexport) void JSFree(GoInt64 engineID);
extern __declspec(dllexport) GoInt64 URLNew(char* url, char* optionsJSON);
extern __declspec(dllexport) char* URLGetURL(GoInt64 urlID);
extern __declspec(dllexport) char* URLGetURLNoQuery(GoInt64 urlID);
extern __declspec(dllexport) char* URLGetMethod(GoInt64 urlID);
extern __declspec(dllexport) char* URLGetBody(GoInt64 urlID);
extern __declspec(dllexport) char* URLGetEncodedQuery(GoInt64 urlID);
extern __declspec(dllexport) void URLFree(GoInt64 urlID);
extern __declspec(dllexport) void FreeString(char* str);

#ifdef __cplusplus
}
#endif